--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,38 +11,72 @@
         <section class="header">
             <h1>IMAGINE UM LUGAR...</h1>
             <p>…onde você possa pertencer a um clube escolar, um grupo de gamers, ou uma comunidade artística mundial. Onde você e alguns amigos possam passar um tempo juntos. Um lugar que torna fácil conversar todos os dias e socializar com mais frequência.</p>
-            <button type="button">Baixar para Windows</button>
-            <button type="button">Abra o Discord no seu navegador</button>
+            <div>
+                <button type="button">Baixar para Windows</button>
+                <button type="button">Abra o Discord no seu navegador</button>
+            </div>
         </section>
     </header>
     <main>
         <section class="item item-1">
-            <picture></picture>
+            <picture>
+                <source media="(max-width: 768px)" srcset="./assets/images/Section_image_1.png">
+                <source media="(min-width: 769px)" srcset="./assets/images/Section_image_1_desktop.png">
+                <img src="./assets/images/Section_Image_1.png" alt="Section_image_1">
+            </picture>
             <div>
-                <h3></h3>
-                <p></p>
+                <h2>
+                    Crie um espaço controlado por convite onde você se sinta em casa
+                </h2>
+                <p>
+                    Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.
+                </p>
             </div>
         </section>
         <section class="item item-2">
-            <picture></picture>
+            <picture>
+                <source media="(max-width: 768px)" srcset="./assets/images/Section_image_2.png">
+                <source media="(min-width: 769px)" srcset="./assets/images/Section_image_2_desktop.png">
+                <img src="./assets/images/Section_Image_2.png" alt="Section_image_2">
+            </picture>
             <div>
-                <h3></h3>
-                <p></p>
+                <h2>
+                    Aqui é fácil se encontrar
+                </h2>
+                <p>
+                    Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.
+                </p>
             </div>
         </section>
         <section class="item item-3">
-            <picture></picture>
+            <picture>
+                <source media="(max-width: 768px)" srcset="./assets/images/Section_image_3.png">
+                <source media="(min-width: 769px)" srcset="./assets/images/Section_image_3_desktop.png">
+                <img src="./assets/images/Section_Image_3.png" alt="Section_image_3">
+            </picture>
             <div>
-                <h3></h3>
-                <p></p>
+                <h2>
+                    Para poucos e para muitos
+                </h2>
+                <p>
+                    Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê poderes especiais aos membros, monte canais privados e muito mais.
+                </p>
             </div>
         </section>
         <section class="item item-4">
-            <picture></picture>
             <div>
-                <h3></h3>
-                <p></p>
+                <h2>
+                    TECNOLOGIA DE CONEXÃO CONFIÁVEL
+                </h2>
+                <p>
+                    Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.
+                </p>
             </div>
+            <picture>
+            <source media="(max-width: 768px)" srcset="./assets/images/Section_image_4.png">
+            <source media="(min-width: 769px)" srcset="./assets/images/Section_image_4_desktop.png">
+                <img src="./assets/images/Section_Image_4.png" alt="Section_image_4">
+            </picture>
         </section>
     </main>
     <footer>
